CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- Added a FilterNice directive which sets the priority
	  of job filter processes that are run by the scheduler.
	- Added Solaris x86 USB printer support.
	- The USB backend now reports both the ulpt and unlpt
	  devices under *BSD.
	- The "lpstat -o" command would truncate the
	  "printer-jobid" string if it was longer than 21
	  characters.
	- The PJL-based MIME type rules now look in the first
	  1024 bytes instead of just the first 512 bytes to find
	  the language mode.
	- The image file types are now listed explicitly in the
	  mime.convs file so that additional image file formats
	  do not use the standard CUPS image filters by default.
	- Updated the Software Programmers Manual to include
	  all of the CUPS API functions.
	- ppdOpen*() no longer sorts choices for an option.
	- The web interface now enforces constraints in PPD
	  files when configuring a printer.
	- When stopping a printer, the scheduler didn't set the
	  printer state before stopping the current job.
	- The cupsaddsmb utility now lists all data files for
	  Win9x and WinMe clients when installing that Windows
	  driver.
	- Jobs submitted to a class now bounce immediately to
	  the next available printer rather than waiting until
	  that printer is available.
	- Filters and backends now also get the CLASS
	  environment variable set when a job is printed to a
	  printer class instead of a normal printer.
	- Added French translations of the web interface, CUPS
	  Overview, Software Administrators Manual, and Software
	  Users Manual contributed by Marian REYT-LLABRES.
	- Added several "hint" messages for common configuration
	  problems that are stored in the error_log file.
	- httpSeparate() now unquotes %xx characters in the
	  username:password field of a URI.
	- When starting the scheduler in daemon mode, the parent
	  process now waits for the child to signal it is ready
	  to accept connections.